Combine README and API into same tree

--- a/docgen/custom.css
+++ b/docgen/custom.css
@@ -336,3 +336,9 @@ img.footer {
 /*********************************************/
 /**             Custom scrollbar            **/
 /*********************************************/
+
+/*********************************************/
+/**             NWNX:EE Custom              **/
+/*********************************************/
+.contents h3 {display:none}
+.headertitle .title {font-size: 200%}
