Make sure only the title <h3> is hiddden

--- a/docgen/custom.css
+++ b/docgen/custom.css
@@ -341,4 +341,5 @@ img.footer {
 /**             NWNX:EE Custom              **/
 /*********************************************/
 .contents h3 {display:none}
+.contents .textblock h3 {display:block}
 .headertitle .title {font-size: 200%}
